remove catalog-info.yaml and update various helm values and configurations
- Deleted catalog-info.yaml file.
- Updated locals.tf to include new namespaces and monitoring exclusions.
- Modified main.tf to adjust AWS provider settings and resource configurations.
- Added new helm values files for Redis, SurrealDB, and other services.
- Enhanced existing helm values for various applications, including memory and resource requests.
- Updated PostgreSQL operator configurations for dynamic settings.
- Introduced new modules for Nomic embedding and adjusted related variables.

--- a/config/yml/helm_values/core-values/ixo-blocksync.yml
+++ b/config/yml/helm_values/core-values/ixo-blocksync.yml
@@ -35,6 +35,10 @@ env:
     value: "<path:${vault_mount}/data/ixo-blocksync#DATABASE_URL>"
   - name: "ENTITY_MODULE_CONTRACT_ADDRESS"
     value: "<path:${vault_mount}/data/ixo-blocksync#ENTITY_MODULE_CONTRACT_ADDRESS>"
+  - name: "IXO_ARCHIVE_NODE_REST_API"
+    value: "https://archive${environment == "mainnet" ? "" : ".${environment}"}.ixo.earth"
+  - name: "NETWORK"
+    value: "<path:${vault_mount}/data/ixo-blocksync#NETWORK>"
 resources:
   requests:
     memory: 1Gi
