--- a/config/yml/helm_values/core-values/ixo_memory_engine.yml
+++ b/config/yml/helm_values/core-values/ixo_memory_engine.yml
@@ -33,12 +33,36 @@ env:
     value: "${neo4j_user}"
   - name: "NEO4J_PASSWORD"
     value: "${neo4j_password}"
+  - name: "DEFAULT_DATABASE"
+    value: "neo4j"
   - name: "HOMESERVER_URL"
     value: "<path:${vault_mount}/data/ixo-memory-engine#HOMESERVER_URL>"
   - name: "ACCESS_TOKEN"
     value: "<path:${vault_mount}/data/ixo-memory-engine#ACCESS_TOKEN>"
+  - name: "OPEN_ROUTER_API_KEY"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#OPEN_ROUTER_API_KEY>"
+  - name: "OPEN_ROUTER_BASE_URL"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#OPEN_ROUTER_BASE_URL>"
+  - name: "LANGFUSE_PUBLIC_KEY"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#LANGFUSE_PUBLIC_KEY>"
+  - name: "LANGFUSE_SECRET_KEY"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#LANGFUSE_SECRET_KEY>"
+  - name: "LANGFUSE_HOST"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#LANGFUSE_HOST>"
+  - name: "CHROMA_DB_HOST"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#CHROMA_DB_HOST>"
+  - name: "CHROMA_DB_PORT"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#CHROMA_DB_PORT>"
+  - name: "CHROMA_DB_USE_SSL"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#CHROMA_DB_USE_SSL>"
+  - name: "GRAPHITI_BASE_URL"
+    value: "http://ixo-memory-engine-graphiti.core.svc.cluster.local:8000"
   - name: "NODE_ENV"
     value: "production"
+  - name: "MCP_AUTH_ENABLED"
+    value: "true"
+  - name: "MCP_AUTH_TOKEN"
+    value: "<path:${vault_mount}/data/ixo-memory-engine#MCP_AUTH_TOKEN>"
 resources:
   requests:
     memory: 100Mi
