--- a/config/yml/helm_values/core-values/ixo_matrix_supamoto_claims_bot.yml
+++ b/config/yml/helm_values/core-values/ixo_matrix_supamoto_claims_bot.yml
@@ -8,12 +8,12 @@ ingress:
   tls:
     - hosts:
         - ${host}
-      secretName: ixo-matrix-bids-bot-tls
+      secretName: ixo-matrix-supamoto-claims-bot-tls
   hosts:
     - host: ${host}
       paths:
         - path: /
-          pathType: Prefix
+          pathType: Prefix  
 persistentVolume:
   storageClass: ${storage_class}
   size: ${storage_size}
@@ -27,7 +27,7 @@ resources:
     memory: 100Mi
     cpu: "40m"
   limits:
-    memory: 200Mi
+    memory: 650Mi
 autoscaling:
   enabled: true
   minReplicas: 1
