Add filebrowser pod configuration and new helm values for domain creator and ECS oracles
- Introduced a new Kubernetes pod configuration for the filebrowser application.
- Added helm values files for the ixo_domain_creator_oracle and ixo_ecs_oracle services.
- Updated various resource requests and limits for improved performance.
- Adjusted ingress settings and environment variables for new services.
- Enhanced existing configurations for better resource management and deployment.

--- a/config/yml/helm_values/core-values/ixo-website-bot-oracle.yml
+++ b/config/yml/helm_values/core-values/ixo-website-bot-oracle.yml
@@ -63,6 +63,8 @@ env:
     value: "<path:${vault_mount}/data/ixo-website-bot-oracle#MEMORY_SERVICE_API_KEY>"
   - name: "AI_MODEL"
     value: "<path:${vault_mount}/data/ixo-website-bot-oracle#AI_MODEL>"
+  - name: "DISABLE_CREDITS"
+    value: "<path:${vault_mount}/data/ixo-website-bot-oracle#DISABLE_CREDITS>"
   - name: PORT
     value: "3000"
 service:
