--- a/config/yml/helm_values/core-values/ixo_ussd_supamoto.yml
+++ b/config/yml/helm_values/core-values/ixo_ussd_supamoto.yml
@@ -15,8 +15,8 @@ ingress:
         - path: /
           pathType: Prefix
 env:
-  - name: "FRICASTALKING_API_KEY"
-    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#FRICASTALKING_API_KEY>"
+  - name: "AFRICASTALKING_API_KEY"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#AFRICASTALKING_API_KEY>"
   - name: "AFRICASTALKING_SENDER_ID"
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#AFRICASTALKING_SENDER_ID>"
   - name: "AFRICASTALKING_USERNAME"
@@ -29,6 +29,20 @@ env:
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_ENCRYPTION_KEY>"
   - name: "CLAIMS_BOT_URL"
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_URL>"
+  - name: "CLAIMS_BOT_DB_HOST"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_HOST>"
+  - name: "CLAIMS_BOT_DB_PORT"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_PORT>"
+  - name: "CLAIMS_BOT_DB_USER"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_USER>"
+  - name: "CLAIMS_BOT_DB_PASSWORD"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_PASSWORD>"
+  - name: "CLAIMS_BOT_DB_NAME"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_NAME>"
+  - name: "CLAIMS_BOT_DB_SSL"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_BOT_DB_SSL>"
+  - name: "CLAIMS_SUBMISSION_TIMEOUT_MS"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#CLAIMS_SUBMISSION_TIMEOUT_MS>"
   - name: "DATABASE_URL"
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#DATABASE_URL>"
   - name: "DELIVERY_CONFIRMATION_DAYS"
@@ -57,6 +71,8 @@ env:
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#OTP_VALIDITY_MINUTES>"
   - name: "PG_DATABASE"
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#PG_DATABASE>"
+  - name: "PG_SSL"
+    value: "<path:${vault_mount}/data/ixo-ussd-supamoto#PG_SSL>"
   - name: "PG_HOST"
     value: "<path:${vault_mount}/data/ixo-ussd-supamoto#PG_HOST>"
   - name: "PG_PASSWORD"
